--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 :root {
+    color-scheme: dark;
     --nav-bg: #42434565;
     --itesus-primary: #1a63a5;
     --itesus-secondary: #131a2e;
